# arkworks-garaga

./: LICENSE  README.md
arkwors-garaga/: Cargo.toml
arkwors-garaga/examples/: silly_circuit.rs  simple_semaphore_circuit.rs
arkwors-garaga/src/: lib.rs  serde.rs
arkwors-garaga/src/verifier_config/: mod.rs  tests.rs
arkwors-garaga/src/verifier_inputs/: mod.rs  tests.rs
