[package]
name = "arkwors-garaga"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
serde = { version = "1.0.204", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.120"
assert_matches = "1.5.0"
ark-bn254 = "0.4.0"

[features]
default = ["serde"]
serde = ["dep:serde"]
