[package]
name = "arkwors-garaga"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-groth16 = "0.4.0"

# Feature `serde`
num-bigint = { version = "0.4.6", features = ["serde"], optional = true }
serde = { version = "1.0.204", features = ["derive"], optional = true }
ark-ff = { version = "0.4.2", optional = true }

[dev-dependencies]
serde_test = "1.0.176"
assert_matches = "1.5.0"
ark-bn254 = "0.4.0"
ark-std = "0.4.0"
serde_json = "1.0.120"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:num-bigint", "dep:ark-ff"]
